build/dev/api1/api1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api1
  name: api1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api1
  template:
    metadata:
      labels:
        app: api1
    spec:
      containers:
      - name: api1
        image: k3d-rtk-dev-registry:5050/api1:latest
        ports:
        - containerPort: 8080
