build/dev/api1/api1-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api1
  name: api1
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: api1
